Add initial MeterFilterConfigProperties

--- a/micrometer-spring-legacy/src/samples/resources/application-prometheus.yml
+++ b/micrometer-spring-legacy/src/samples/resources/application-prometheus.yml
@@ -14,4 +14,11 @@
 # limitations under the License.
 #
 
-spring.metrics.prometheus.enabled: true
+spring.metrics.prometheus.enabled: false
+
+
+clint.metrics.filter:
+  ALL.enabled: false
+  jvm.enabled: true
+  jvm.memory.used: enabled
+
